# triopp

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Camera.cpp  Camera.hpp  LinearSolve.cpp  LinearSolve.hpp  MathUtil.cpp  MathUtil.hpp  MatrixUtil.cpp  MatrixUtil.hpp
test/: CMakeLists.txt  CameraTest.cpp  LinearSolveTest.cpp  MathUtilTest.cpp  MatrixUtilTest.cpp  TestUtil.cpp  TestUtil.hpp
